fix set and get object error